<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
      android:textColor="#FFFFFF"
    android:layout_height="match_parent"
    android:background="@drawable/road"
    android:orientation="vertical" >
    <TableLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
         android:background="#55000000"
        android:layout_height="wrap_content" >
        <TableRow>
            <TextView
                android:id="@+id/lblcurtrip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                 android:textColor="#FFFFFF"
                android:text="@string/current_trip_"
                 />
            <TextView
                android:id="@+id/tripName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onTripNameClick"
                android:textColor="#FFFFFF"
				android:clickable="true"
                android:text="some name" />
        </TableRow>
        <TableRow>
            <ImageButton
                android:id="@+id/mapButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="btnMapClicked"
                android:src="@drawable/treasuremap" />
            <TextView
                android:id="@+id/mapText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="#FFFFFF"
                android:singleLine = "false"
                android:text="View and edit trip on map" />
        </TableRow>
        <TableRow>
            <ImageButton
                android:id="@+id/summaryButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="btnSummaryClicked"
                android:src="@drawable/gps" />
            <TextView
                android:id="@+id/summaryText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#FFFFFF"
                android:singleLine = "false"
                android:text="View recording and upload status" />
        </TableRow>
         <TableRow>
            <ImageButton
                android:id="@+id/profileButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="btnProfileClicked"
                android:src="@drawable/chart" />
            <TextView
                android:id="@+id/mapText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="#FFFFFF"
                android:singleLine="false"
                android:text="Profile View" />
        </TableRow>
        <TableRow>
            <ImageButton
                android:id="@+id/prefsButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/startupTitle"
                android:onClick="btnPrefsClicked"
                android:src="@drawable/settings" />
            <TextView
                android:id="@+id/prefsText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#FFFFFF"
                android:text="@string/settings" />
        </TableRow>
          <TableRow>
            <ImageButton
                android:id="@+id/helpButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/startupTitle"
                android:onClick="btnHelpClicked"
                android:src="@drawable/help" />
            <TextView
                android:id="@+id/helpText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#FFFFFF"
                android:text="@string/help" />
        </TableRow>
        
          <TableRow>
            <TextView
                android:id="@+id/lblappversion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#FFFFFF"
                android:text="Version Info:"
                 />
            <TextView
                android:id="@+id/txtVersionInfo"
                android:layout_width="wrap_content"
                android:textColor="#FFFFFF"
                android:layout_height="wrap_content"
                android:text="checking..." />
        </TableRow>
    </TableLayout>
</LinearLayout>